# gclados

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
cli/: CMakeLists.txt  args.c  args.h  builder.c  builder.h  command.h  filenameUtils.c  filenameUtils.h  generate.c  generate.h  globUtils.c  globUtils.h  help.c  help.h  main.c  run.c  run.h  test.c  test.h  testParser.c  testParser.h
example/: CMakeLists.txt  hello.test.c  sum.c  sum.h  sum.test.c
examples/: CMakeLists.txt
examples/generate/: CMakeLists.txt  generateScript.txt  multiply.c  multiply.h  multiply.test.c
examples/miscellaneous/: CMakeLists.txt  test.c
examples/simple/: CMakeLists.txt  mathutils.c  mathutils.h  subtract.test.c  sum.test.c
examples/snapshots/: CMakeLists.txt  sample.test.c  snap.test.c
lib/: CMakeLists.txt  arrayPredicates.c  arrayPredicates.h  boolPredicates.c  boolPredicates.h  bytePredicates.c  bytePredicates.h  colors.c  colors.h  dynamicArray.c  dynamicArray.h  fileUtils.c  floatPredicates.c  floatPredicates.h  gclados.c  gclados.h  intPredicates.c  intPredicates.h  ioutils.c  ioutils.h  logging.c  messageUtils.c  messageUtils.h  mutils.c  mutils.h  notPredicate.c  notPredicate.h  numberPredicates.c  numberPredicates.h  panic.c  panic.h  predicate.c  predicate.h  predicateNamespace.c  predicateNamespace.h  ptf.c  ptf.h  snapshots.c  snapshots.h  statement.c  (+7 more)
tests/: CMakeLists.txt  boolPredicates.test.c  colors.test.c  main.c
